--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  blogo:
+    admin: 
+      meta_description: "Meta descriptions"
+      meta_title: "Meta title"
